Opened 13 years ago

Closed 13 years ago

#2762 closed defect (fixed)

Option timecode shows an ugly warning

Reported by: Carl Eugen Hoyos Owned by:
Priority: minor Component: undetermined
Version: git-master Keywords: regression
Cc: Blocked By:
Blocking: Reproduced by developer: yes
Analyzed by developer: no

Description (last modified by Carl Eugen Hoyos)

http://thread.gmane.org/gmane.comp.video.ffmpeg.user/46505
ffmpeg shows an ugly warning when using the -timecode option since d64b8540 (the option apparently works fine).

$ ffmpeg -f lavfi -i testsrc -timecode 00:00:01:00 -t 2 out.mov
ffmpeg version N-54568-gd1e8d4b Copyright (c) 2000-2013 the FFmpeg developers
  built on Jul  9 2013 02:12:39 with gcc 4.7 (SUSE Linux)
  configuration: --enable-gpl --disable-indev=jack
  libavutil      52. 38.100 / 52. 38.100
  libavcodec     55. 18.102 / 55. 18.102
  libavformat    55. 11.101 / 55. 11.101
  libavdevice    55.  2.100 / 55.  2.100
  libavfilter     3. 79.100 /  3. 79.100
  libswscale      2.  3.100 /  2.  3.100
  libswresample   0. 17.102 /  0. 17.102
  libpostproc    52.  3.100 / 52.  3.100
Input #0, lavfi, from 'testsrc':
  Duration: N/A, start: 0.000000, bitrate: N/A
    Stream #0:0: Video: rawvideo (RGB[24] / 0x18424752), rgb24, 320x240 [SAR 1:1 DAR 4:3], 25 tbr, 25 tbn, 25 tbc
Codec AVOption gop_timecode (MPEG GOP Timecode in hh:mm:ss[:;.]ff format) specified for output file #0 (out.mov) has not been used for any stream. The most likely reason is either wrong type (e.g. a video option with no video streams) or that it is a private option of some encoder which was not actually used for any stream.
Output #0, mov, to 'out.mov':
  Metadata:
    timecode        : 00:00:01:00
    encoder         : Lavf55.11.101
    Stream #0:0: Video: mpeg4 (mp4v / 0x7634706D), yuv420p, 320x240 [SAR 1:1 DAR 4:3], q=2-31, 200 kb/s, 12800 tbn, 25 tbc
Stream mapping:
  Stream #0:0 -> #0:0 (rawvideo -> mpeg4)
Press [q] to stop, [?] for help
frame=   50 fps=0.0 q=2.0 Lsize=      85kB time=00:00:02.00 bitrate= 349.5kbits/s
video:84kB audio:0kB subtitle:0 global headers:0kB muxing overhead 1.887694%

Change History (4)

in reply to:  description ; comment:1 by Michael Niedermayer, 13 years ago

Replying to cehoyos:

http://thread.gmane.org/gmane.comp.video.ffmpeg.user/46505
ffmpeg shows an ugly warning when using the -timecode option since d64b854 (the option apparently works fine).

error: short SHA1 d64b854 is ambiguous

comment:2 by Carl Eugen Hoyos, 13 years ago

Description: modified (diff)

in reply to:  1 comment:3 by Carl Eugen Hoyos, 13 years ago

Replying to michael:

Replying to cehoyos:

http://thread.gmane.org/gmane.comp.video.ffmpeg.user/46505
ffmpeg shows an ugly warning when using the -timecode option since d64b854 (the option apparently works fine).

error: short SHA1 d64b854 is ambiguous

Sorry it's d64b8540

comment:4 by Michael Niedermayer, 13 years ago

Reproduced by developer: set
Resolution: fixed
Status: newclosed
Note: See TracTickets for help on using tickets.