ffmpeg_opt: do not warn about unused gop_timecode

The option is injected by generic code and being sometimes unused is normal.

Fixes Ticket2762

Signed-off-by: Michael Niedermayer <michaelni@gmx.at>